Operadores basicos adicionado

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,30 +13,77 @@ body {
     max-width:200px;
     max-height:150px;
     position: fixed;
-    left: 43%;
+    left: 43.3%;
     top: 23%;
+    
 }
 
 #num1 {
     margin: 5%;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 1px 1px 2px #333333;
+    border: none;
+    border: 1px solid #000000;
 }
 
 #num2 {
     margin: 5%;
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 1px 1px 2px #333333;
+    border: none;
+    border: 1px solid #000000;
 }
 
-#resul {
+#texto {
     background: #a4dcb9;
+    color: #000000;
     position: fixed;
     top: 49%;
     left: 43.6%;
     text-align: center;
+    border-radius: 10px;
+    box-shadow: 1px 1px 2px #333333;
+    border: 1px solid #000000;
     
 }
 
 #cal {
+    border-radius: 10px;
+    box-shadow: 1px 1px 2px #333333;
+    border: 1px solid #000000;
     position: fixed;
     left: 47%;
     background-color: #32b9be;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+#texto_limpar {
+    background-color: brown;
+    border-radius: 10px;
+    box-shadow: 1px 1px 2px #333333;
+    border: 1px solid #000000;
+    position: fixed;
+    left: 56%;
+    top: 49.1%;
+    background-color: #32b9be;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+
+}
+
+#texto_copiar {
+    background-color: brown;
+    border-radius: 10px;
+    box-shadow: 1px 1px 2px #333333;
+    border: 1px solid #000000;
+    position: fixed;
+    left: 60%;
+    top: 49.1%;
+    background-color: #32b9be;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+
 }
 
